--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,376 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
+@import url(./assets/css/root.css);
+
+* {
+  margin: 0;
+  padding: 0;
+  list-style-type: none !important;
+  text-decoration: none !important;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.cursor_pointer {
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+  font-family: "Eurostile Extended";
+  src: url(../src/assets/fonts/EurostileBQ-BoldExtended.otf);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.font_family_Eurostile_Extended {
+  font-family: "Eurostile Extended";
+}
+
+.font_family_manrope {
+  font-family: "Manrope", sans-serif;
+}
+
+.max_width_1140 {
+  max-width: 1140px;
+}
+
+.max_width_1200 {
+  max-width: 1200px;
+}
+
+.max_width_338 {
+  max-width: 338px;
+}
+
+.max_width_498 {
+  max-width: 498px;
+}
+
+.max_width_704 {
+  max-width: 704px;
+}
+
+.max_width_640 {
+  max-width: 640px;
+}
+
+.max_width_539 {
+  max-width: 539px;
+  width: 100%;
+}
+
+.max_width_522 {
+  max-width: 522px;
+}
+
+.max_width_530 {
+  max-width: 530px;
+}
+
+.max_width_310 {
+  max-width: 310px;
+}
+
+.max_width_520 {
+  max-width: 520px;
+}
+
+.max_width_504 {
+  max-width: 504px;
+}
+
+.max_width_995 {
+  max-width: 995px;
+}
+
+.margin_top_1 {
+  margin-top: -1px;
+}
+
+.padding_top_15 {
+  padding-top: 15px;
+}
+
+.margin_top_13 {
+  margin-top: 13px;
+}
+
+
+.padding_top_32 {
+  padding-top: 32px;
+}
+
+.box_padding_bottom {
+  padding-bottom: 50px;
+}
+
+.padding_bottom_96 {
+  padding-bottom: 96px;
+}
+
+.padding_top_47 {
+  padding-top: 47px;
+}
+
+.padding_top_150 {
+  padding-top: 150px;
+}
+
+
+.padding_bottom_29 {
+  padding-bottom: 29px;
+}
+
+.gap_17 {
+  gap: 17px;
+}
+
+.hero_baground {
+  background-image: url(../src/assets/images/hero-bg.png);
+  background-position: center;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+.Yellow_section {
+  background-image: url(../src/assets/images/section4-baground.png);
+  background-position: center;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+}
+
+
+
+
+
+
+.border-btn2 {
+  border: 0.5px solid black;
+  padding: 6px 7px 6px 7px;
+}
+
+.btn-get-padding {
+  padding: 6.75px 6.44px 6.31px 7px;
+}
+
+.btn-line2 {
+  width: 20px;
+  height: 0.5px;
+  background: yellow;
+  bottom: -0.5px;
+  left: 25%;
+}
+
+.btn-get-in-touch2 {
+  background: black;
+  border-radius: 1px;
   color: white;
+  outline: none;
+  border: none;
+  padding: 13.47px 8.78px 13.47px 8.78px;
+  transition: all 300ms linear;
+  border: 0.5px solid black;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-get-in-touch2:hover {
+  background: transparent;
+  color: black;
+  border-radius: 8px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.border-btn2 {
+  transition: all 300ms linear;
+}
+
+.border-btn2:hover {
+  border-radius: 8px;
+  transform: scale(0.9);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.border-btn {
+  border: 0.5px solid var(--yellow);
+  padding: 6px 7px 6px 7px;
+}
+
+.btn-get-padding {
+  padding: 6.75px 6.44px 6.31px 7px;
+}
+
+.btn-line {
+  width: 20px;
+  height: 0.5px;
+  background: black;
+  bottom: -0.5px;
+  left: 25%;
+}
+
+.btn-get-in-touch {
+  background: var(--yellow);
+  border-radius: 1px;
+  outline: none;
+  border: none;
+  padding: 13.47px 8.78px 13.47px 8.78px;
+  transition: all 300ms linear;
+  border: 0.5px solid var(--yellow);
+}
+
+.btn-get-in-touch:hover {
+  background: transparent;
+  color: var(--yellow);
+  border-radius: 8px;
+
+}
+
+.border-btn {
+  transition: all 300ms linear;
+}
+
+.border-btn:hover {
+  border-radius: 8px;
+  transform: scale(0.9);
+}
+
+
+
+
+
+
+
+.nav_padding {
+  padding-top: 13px;
+  padding-bottom: 13px;
+}
+
+.section2_box {
+  border: 1px solid var(--yellow);
+  border-radius: 24px;
+  background: var(--box-baground);
+  padding: 20px 12px 20px 12px;
+}
+
+.box_ellipse {
+  top: 0;
+  left: 0;
+}
+
+.ellipse2 {
+  top: 0;
+  right: 0;
+}
+
+.ellipse3 {
+  top: 0;
+  left: 0;
+}
+
+.Name_input {
+  outline: none;
+  background: #191919;
+  border: none;
+  padding: 16px 22px 12px;
+  border: 0.5px solid #F2F2F366;
+  border-radius: 3px;
+}
+.Name_input:focus {
+  outline: none !important;
+  border-color: var(--yellow);
+}
+.circle_position {
+  bottom: -15%;
+  left: 0;
+  transform: translateX(-50%);
+}
+
+.section5_ellipse1 {
+  top: 10%;
+  right: 0;
+}
+
+.section5_ellipse2 {
+  bottom: -5.5%;
+  left: 0;
+}
+
+.leptop2_position {
+  top: -25%;
+  right: 0;
+}
+
+.footer_box {
+  padding: 20px 20px 20px;
+  background-image: url(../src/assets/images//footer-box.png);
+  background-position: center;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  border-radius: 16px;
+  transform: translateY(70px);
+}
+
+.footer_icon:hover {
+  transform: translateY(-7px);
+  transition: all 300ms linear;
+}
+
+.footer_line {
+  border: 1px solid #8A8A8A;
+}
+
+@media (min-width:768px) {
+  .padding_top_182 {
+    padding-top: 182px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .section2_box {
+    padding: 63px 53px 50px 54px;
   }
+
+  .box_padding_bottom {
+    padding-bottom: 164px;
+  }
+
+  .padding_top_110 {
+    padding-top: 110px !important;
+  }
+
+  .padding_top_115 {
+    padding-top: 115px !important;
+  }
+
+
+}
+
+@media (min-width:992px) {
+  .padding_bottom_201 {
+    padding-bottom: 201px;
+  }
+    .footer_box {
+      padding: 52px 50px 43px;
+      background-image: url(../src/assets/images//footer-box.png);
+      background-position: center;
+      background-size: 100% 100%;
+      background-repeat: no-repeat;
+      border-radius: 16px;
+      transform: translateY(70px);
+      /* height: 348px !important; */
+    }
+  
+    .position-leptop {
+      position: absolute;
+    }
 }
